--- a/loopback/locatewalmart/server/model-config.json
+++ b/loopback/locatewalmart/server/model-config.json
@@ -31,5 +31,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "store": {
+    "dataSource": "mymongo",
+    "public": true
   }
 }
