--- a/loopback/locatewalmart/package.json
+++ b/loopback/locatewalmart/package.json
@@ -8,6 +8,10 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "@angular/common": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
@@ -17,10 +21,15 @@
     "loopback-connector-mongodb": "^1.17.0",
     "loopback-connector-mysql": "^2.4.0",
     "loopback-datasource-juggler": "^2.39.0",
+    "rxjs": "^5.0.0-beta.12",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^1.0.1"
+    "socket.io-client": "^1.5.1",
+    "strong-error-handler": "^1.0.1",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "@mean-expert/loopback-sdk-builder": "^2.1.0-beta.13",
+    "@types/socket.io-client": "^1.4.27",
     "eslint": "^2.13.1",
     "eslint-config-loopback": "^4.0.0",
     "nsp": "^2.1.0"
