--- a/loopback/bpm/server/model-config.json
+++ b/loopback/bpm/server/model-config.json
@@ -31,5 +31,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "Content": {
+    "dataSource": "bpm",
+    "public": true
   }
 }
