bpm discover taxonomy

--- a/loopback/bpm/server/model-config.json
+++ b/loopback/bpm/server/model-config.json
@@ -35,5 +35,9 @@
   "Content": {
     "dataSource": "bpm",
     "public": true
+  },
+  "Taxonomy": {
+    "dataSource": "bpm",
+    "public": true
   }
 }
