bpm discover content_taxonomy

--- a/loopback/bpm/server/model-config.json
+++ b/loopback/bpm/server/model-config.json
@@ -38,6 +38,12 @@
   },
   "Taxonomy": {
     "dataSource": "bpm",
+    "public": true,
+    "$promise": {},
+    "$resolved": true
+  },
+  "ContentTaxonomy": {
+    "dataSource": "bpm",
     "public": true
   }
 }
