Define the Review model

--- a/loopback/loopback-getting-started/server/model-config.json
+++ b/loopback/loopback-getting-started/server/model-config.json
@@ -35,5 +35,9 @@
   "CoffeeShop": {
     "dataSource": "mysqlDs",
     "public": true
+  },
+  "Review": {
+    "dataSource": "mongoDs",
+    "public": true
   }
 }
