--- a/loopback/loopback-getting-started/server/model-config.json
+++ b/loopback/loopback-getting-started/server/model-config.json
@@ -39,5 +39,9 @@
   "Review": {
     "dataSource": "mongoDs",
     "public": true
+  },
+  "Reviewer": {
+    "dataSource": "mongoDs",
+    "public": true
   }
 }
