--- a/loopback/api/package.json
+++ b/loopback/api/package.json
@@ -17,7 +17,8 @@
     "loopback-connector-mysql": "^2.4.0",
     "loopback-datasource-juggler": "^2.39.0",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^1.0.1"
+    "strong-error-handler": "^1.0.1",
+    "transient": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
