tuto loopback-example-database end

--- a/loopback/tutorials/database/server/model-config.json
+++ b/loopback/tutorials/database/server/model-config.json
@@ -31,5 +31,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "Account": {
+    "dataSource": "accountDS",
+    "public": true
   }
 }
