lb +modelos many-to-many Through

--- a/loopback/lb/server/model-config.json
+++ b/loopback/lb/server/model-config.json
@@ -31,5 +31,21 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "Content": {
+    "dataSource": "lbMySqlDs",
+    "public": true
+  },
+  "Taxonomy": {
+    "dataSource": "lbMySqlDs",
+    "public": true
+  },
+  "ContentTaxonomy": {
+    "dataSource": "lbMySqlDs",
+    "public": true
+  },
+  "Config": {
+    "dataSource": "lbMySqlDs",
+    "public": true
   }
 }
