lb bpm- discover models

--- a/loopback/bpm/server/model-config.json
+++ b/loopback/bpm/server/model-config.json
@@ -31,5 +31,21 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "AvcmsConfig": {
+    "dataSource": "bpm",
+    "public": true
+  },
+  "Content": {
+    "dataSource": "bpm",
+    "public": true
+  },
+  "ContentTaxonomy": {
+    "dataSource": "bpm",
+    "public": true
+  },
+  "Taxonomy": {
+    "dataSource": "bpm",
+    "public": true
   }
 }
