--- a/hapi/nickolous/package.json
+++ b/hapi/nickolous/package.json
@@ -6,10 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:niix/hapi-rest-demo.git"
-  },
   "author": "Nick Justice",
   "license": "MIT",
   "dependencies": {
@@ -19,9 +15,10 @@
     "hapi-sequelize-crud": "^2.9.0",
     "hapi-sequelize-crud2": "^2.7.4",
     "joi": "^5.1.0",
-    "sequelize": "^3.27.0",
-    "sqlite3": "^3.0.4"
+    "mysql": "^2.12.0",
+    "sequelize": "^3.27.0"
   },
+  "private": true,
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-nodemon": "^1.0.5",
