--- a/express/api/package.json
+++ b/express/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
+    "googleapis": "^15.0.0",
     "morgan": "1.7.0",
     "mysql": "^2.12.0",
     "sequelize": "3.24.3",
